--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    buildToolsVersion '29.0.3'
 
     defaultConfig {
         applicationId "gaur.nikhil.melody"
@@ -29,12 +29,11 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.karumi:dexter:6.2.2'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'com.karumi:dexter:6.2.3'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    testImplementation 'junit:junit:4.+'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
